--- a/projects/ng-kinibind/package.json
+++ b/projects/ng-kinibind/package.json
@@ -1,9 +1,8 @@
 {
   "name": "ng-kinibind",
-  "description": "Kinibind components and directives for the Angular framework.",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/common": "^8.0.0",
+    "@angular/core": "^8.0.0"
   }
 }
